complete predict system speak and UI

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,22 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="110dp"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="523dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:ems="10"
-            android:imeOptions="flagNoExtractUi"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/outPut"
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:imeOptions="flagNoExtractUi"
+                android:inputType="text" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="140dp"
@@ -32,6 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="speak"
                 android:text="@string/read" />
 
             <Button
@@ -39,7 +55,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:onClick="delWord"
+                android:text="DELETE" />
         </LinearLayout>
 
     </LinearLayout>
@@ -49,21 +66,11 @@
         android:layout_height="100dp">
 
         <android.support.v7.widget.GridLayout
-            android:id="@+id/gridContain"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:id="@+id/gridContainBT"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:columnCount="3">
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Button" />
         </android.support.v7.widget.GridLayout>
     </HorizontalScrollView>
 
