--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,19 +56,79 @@
 
     </LinearLayout>
 
-    <HorizontalScrollView
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="wrap_content">
 
-        <android.support.v7.widget.GridLayout
-            android:id="@+id/gridContainBT"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            app:columnCount="3">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="52dp">
 
-        </android.support.v7.widget.GridLayout>
-    </HorizontalScrollView>
+            <TextView
+                android:id="@+id/tv1"
+                android:layout_width="129dp"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:scrollHorizontally="false"
+                android:text="TextView1"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/tv2"
+                android:layout_width="129dp"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:scrollHorizontally="false"
+                android:text="TextView2"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/tv3"
+                android:layout_width="129dp"
+                android:layout_height="match_parent"
+                android:maxLines="2"
+                android:scrollHorizontally="false"
+                android:text="TextView3"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="49dp">
+
+            <TextView
+                android:id="@+id/tv4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:scrollHorizontally="false"
+                android:text="TextView4"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/tv5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:scrollHorizontally="false"
+                android:text="TextView5"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/tv6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:scrollHorizontally="false"
+                android:text="TextView6"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+        </TableRow>
+    </TableLayout>
 
 </LinearLayout>
